5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1644_1053.log
== TEST (2019-04-09 16:34:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if (cervo == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v + "nao eh o patrono do Harry Potter"

print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (cervo == v):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:34:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v + "nao eh o patrono do Harry Potter"

print(msg)
-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:34:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v + ,"nao eh o patrono do Harry Potter"

print(msg)
-- ERROR:
File "XXXX", line 9
    msg= v + ,"nao eh o patrono do Harry Potter"
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:35:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v,"nao eh o patrono do Harry Potter"

print(msg)
-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:35:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v *"nao eh o patrono do Harry Potter"

print(msg)
-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:36:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v + "nao eh o patrono do Harry Potter"

print(msg)
-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:36:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v +             "nao eh o patrono do Harry Potter"

print(msg)
-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:37:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v + " nao eh o patrono do Harry Potter"

print(msg)
-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:37:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v + " nao eh o patrono do Harry Potter"

print(msg)
-- EXECUTION TIME:
0.181436
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh o patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:37:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v + " nao eh o patrono do Harry Potter"

print(msg)
-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:41:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v + " nao eh o patrono do Harry Potter"

print(msg)
-- EXECUTION TIME:
0.162001
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh o patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:42:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v + " nao eh o patrono do Harry Potter"

print(msg)
-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:42:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v + " nao eh o patrono do Harry Potter"

print(msg)
-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else:
	msg= v + " nao eh o patrono do Harry Potter"

print(msg)
-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:51:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg="cervo eh o patrono do Harry Potter"
else :
	msg= v + " nao eh o patrono do Harry Potter"

print(msg)
-- EXECUTION TIME:
0.194338
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh o patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:51:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg= "cervo eh o patrono do Harry Potter"
else :
	msg= v + " nao eh o patrono do Harry Potter"

print(msg)
-- EXECUTION TIME:
0.151092
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
Insira o animal:cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
Insira o animal:bode nao eh o patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:51:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg= "cervo eh o patrono do Harry Potter"
else :
	msg= v + " nao eh o patrono do Harry Potter"

print(msg)
-- EXECUTION TIME:
0.153871
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh o patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:51:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg= "cervo eh  patrono do Harry Potter"
else :
	msg= v + " nao eh  patrono do Harry Potter"

print(msg)
-- EXECUTION TIME:
0.126883
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh  patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh  patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 08:40:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v= input("Insira o animal:")

if ("cervo" == v):
	msg= "cervo eh  patrono do Harry Potter"
else :
	msg= v + " nao eh  patrono do Harry Potter"

print(msg)
-- OUTPUT:
cervo eh  patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
